--- a/packages/site/wrangler.toml.action.template
+++ b/packages/site/wrangler.toml.action.template
@@ -1,12 +1,8 @@
 # wrangler.toml.template
-name = "email-gateway"
+name = "my-blog"
 main = "worker.js"
 compatibility_date = "2025-07-08"
 
 [observability]
 enabled = true
 head_sampling_rate = 1
-
-[[email]]
-name = "email-gateway"
-destination_confirmed = true
