--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
     "node": ">=22.0.0",
     "pnpm": ">=10.0.0"
   },
+    "pnpm": {
+      "overrides": {
+        "webpack-dev-server": "5.2.1"
+    }
+  },
   "devDependencies": {
     "@biomejs/biome": "^2.1.2",
     "@changesets/changelog-github": "^0.5.1",
