--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -15,7 +15,30 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "type-check": "tsc --noEmit",
     "format": "biome format --write .",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "lint:unsafe_fix": "biome check --write --unsafe .",
+    "lint:ci": "biome ci .",
     "ci": "pnpm run type-check && pnpm run build"
+  },
+  "_scripts_documentation": {
+    "clean": "Removes the `dist` directory.",
+    "docusaurus": "Executes the Docusaurus CLI.",
+    "start": "Starts the local development server.",
+    "cp-resources": "Copies worker manifest and wrangler template to `dist`.",
+    "build": "Builds the static site for production.",
+    "swizzle": "Customizes Docusaurus theme components.",
+    "clear": "Clears the Docusaurus cache.",
+    "serve": "Serves the production build locally.",
+    "write-translations": "Manages site translations.",
+    "write-heading-ids": "Generates explicit heading IDs.",
+    "type-check": "Performs static type checking with TypeScript.",
+    "format": "Formats code with Biome.",
+    "lint": "Check code quality and formatting using Biome",
+    "lint:fix": "Fix auto-fixable linting issues",
+    "lint:unsafe_fix": "Fix auto-fixable linting issues including unsafe fixes",
+    "lint:ci": "Run Biome in CI mode (stricter)",
+    "ci": "Runs type checking and builds the site for CI."
   },
   "dependencies": {
     "@docusaurus/core": "3.8.1",
