--- a/package.json
+++ b/package.json
@@ -3,29 +3,24 @@
   "private": true,
   "scripts": {
     "version": "pnpm changeset version && pnpm run postversion",
-    "postversion": "pnpm run -r --if-present postversion",
     "publish": "npm run prepublishOnly && pnpm changeset publish",
     "clean": "pnpm run -r clean",
     "build": "pnpm run -r build",
     "type-check": "pnpm run -r type-check",
-    "type-check:test": "pnpm run -r type-check:test",
-    "type-check:all": "pnpm run -r type-check:all",
-    "format": "pnpm run -r format",
-    "lint": "pnpm run -r lint",
-    "lint:fix": "pnpm run -r lint:fix",
-    "lint:unsafe_fix": "pnpm run -r lint:unsafe_fix",
-    "lint:ci": "pnpm run -r lint:ci",
-    "test": "pnpm run -r test",
-    "check": "pnpm run -r check",
-    "check:ci": "pnpm run -r check:ci",
+    "type-check:test": "pnpm run -r --if-present type-check:test",
+    "type-check:all": "pnpm run -r --if-present type-check:all",
+    "format": "pnpm run --if-present -r format",
+    "lint": "pnpm run -r --if-present lint",
+    "lint:fix": "pnpm run -r --if-present lint:fix",
+    "lint:unsafe_fix": "pnpm run -r --if-present lint:unsafe_fix",
+    "lint:ci": "pnpm run -r --if-present lint:ci",
+    "test": "pnpm run -r --if-present test",
     "ci": "pnpm run -r --reporter=append-only ci",
-    "validate": "pnpm run -r --sequential validate",
-    "prepublishOnly": "pnpm run -r prepublishOnly",
+    "validate": "pnpm run -r --sequential ci",
     "upgrade": "pnpm update -r"
   },
   "_scripts_documentation": {
     "version": "Bumps versions via changesets and then runs post-versioning steps.",
-    "postversion": "Runs the 'postversion' script in all packages (e.g., to sync manifest versions).",
     "publish": "changeset publish",
     "clean": "Clean build artifacts in dist/",
     "build": "Clean and build",
@@ -38,11 +33,8 @@
     "lint:unsafe_fix": "Fix auto-fixable linting issues including unsafe fixes",
     "lint:ci": "Run Biome in CI mode (stricter)",
     "test": "Run Jest tests with ES modules support",
-    "check": "Run all checks (types, lint, tests) - for development",
-    "check:ci": "Run all checks (types, lint, tests) for CI/CD",
     "ci": "Run all CI checks including build - for CI/CD",
     "validate": "Run all CI checks including build - for dev - similar to CI above but sequential",
-    "prepublishOnly": "Runs before npm publish to ensure quality",
     "upgrade": "Upgrades dependencies using pnpm."
   },
   "engines": {
