--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -110,5 +110,4 @@ jobs:
     with:
       published_packages: ${{ needs.publish.outputs.published_packages }}
     secrets:
-      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+      INFISICAL_CLIENT_SECRET: ${{ secrets.INFISICAL_CLIENT_SECRET }}
