fix: publish issue
fix: publish issue - 2

fix: publish issue - 3

fix: publish issue - 4

fix: publish issue - 5

fix: publish issue - 6

fix: publish issue - 7

fix: publish issue - 8

fix: publish issue - 9

fix: publish issue - 10

fix: publish issue - 11

fix: publish issue - 12

fix: publish issue - 13

fix: publish issue - 14

fix: publish issue - 15

fix: publish issue - 16

fix: publish issue - 17

fix: publish issue - 18

fix: publish issue - 19

fix: publish issue - 20

fix: publish issue - 21

fix: publish issue - 22

fix: publish issue - 23

fix: publish issue - 24

fix: publish issue - 25

fix: publish issue - 26

fix: publish issue - 27

fix: publish issue - 28

fix: publish issue - 29

fix: publish issue - 30

fix: publish issue - 31

fix: publish issue - 32

fix: publish issue - 33

fix: publish issue - 33

fix: publish issue - 34

fix: publish issue - 35

fix: publish issue - 36

fix: publish issue - 37

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 INFISICAL_URL=https://eu.infisical.com
 INFISICAL_CLIENT_ID=db0d2709-37b1-43f5-88ea-311d2fdc6b06
 INFISICAL_PROJECT_ID=39443325-fe7c-4592-b470-da92c17d56f4
+INFISICAL_PROJECT_SLUG=homelab-0s-t2
