--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -6,7 +6,7 @@
     "clean": "rimraf dist",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "cp-resources": "cp worker-manifest.json ./dist/ && cp -r wrangler.toml.action.template ./dist/wrangler.toml",
+    "cp-resources": "cp -r wrangler.toml.action.template ./dist/wrangler.toml",
     "build": "pnpm run clean && docusaurus build --out-dir dist && pnpm run cp-resources",
     "swizzle": "docusaurus swizzle",
     "clear": "docusaurus clear",
@@ -28,7 +28,7 @@
     "clean": "Removes the `dist` directory.",
     "docusaurus": "Executes the Docusaurus CLI.",
     "start": "Starts the local development server.",
-    "cp-resources": "Copies worker manifest and wrangler template to `dist`.",
+    "cp-resources": "Copies wrangler template to `dist`.",
     "build": "Builds the static site for production.",
     "swizzle": "Customizes Docusaurus theme components.",
     "clear": "Clears the Docusaurus cache.",
